# FEUP-CAL

./: .gitignore  README.md
1/: main.cpp
1/Tests/: Change.cpp  Factorial.cpp  Factorial.h  Partitioning.cpp  Partitioning.h  Sum.cpp  Sum.h  tests.cpp
2/: CMakeLists.txt
2/Tests/: Labirinth.cpp  Labirinth.h  Sudoku.cpp  Sudoku.h  tests.cpp
3/: CMakeLists.txt
3/Tests/: NearestPoints.cpp
3/cal_fp03_CLion/Tests/: NearestPoints.cpp  NearestPoints.h  Point.h  tests.cpp
4/Tests/: Graph.h  tests.cpp
4/cal_fp04_CLion/: CMakeLists.txt  main.cpp
4/cal_fp04_CLion/Tests/: Graph.h  Person.h  tests.cpp
5/: CMakeLists.txt
5/Tests/: Graph.h  MutablePriorityQueue.h  tests.cpp
6/: CMakeLists.txt  FichaJUNG.cpp
6/resources/mapa1/: arestas.txt
7/: CMakeLists.txt  main.cpp
7/Tests/: Graph.h
8/Tests/: Graph.h
Praticas/1/: CMakeLists.txt
Praticas/1/Tests/: Change.h  Factorial.cpp  Partitioning.cpp
Praticas/2/Tests/: tests.cpp
Praticas/3/Tests/: Point.cpp
Praticas/4/Tests/: Person.cpp
Praticas/5/: main.cpp
Praticas/5/Tests/: Graph.h  MutablePriorityQueue.h
Praticas/6/: FichaJUNG.cpp
Praticas/6/resources/mapa1/: nos.txt
Praticas/7/Tests/: Graph.h  tests.cpp
Praticas/8/: CMakeLists.txt  main.cpp
Praticas/8/Tests/: Graph.h  tests.cpp
Projeto/: README.md
Projeto/Parte I/: PrimeiraParte.docx
Projeto/Parte II/: README.txt
Projeto/Parte II/doc/: ~$L1920_TURMA3_GRUPO8.docx
Projeto/Parte II/src/: .gitignore  CMakeLists.txt  main.cpp
Projeto/Parte II/src/Graph/: Graph.cpp  Graph.h  MutablePriorityQueue.h  Stop.h
Projeto/Parte II/src/POIGraph/: POIEdge.h  POIGraph.h  POIVertex.h
Projeto/Parte II/src/Resources/: metro_routes.txt  porto_strong_edges.txt  porto_strong_nodes_latlng.txt  porto_strong_nodes_xy.txt  tags.txt
Projeto/Parte II/src/Resources/GridGraphs/16x16/: edges.txt  nodes.txt
Projeto/Parte II/src/Resources/GridGraphs/4x4/: edges.txt  nodes.txt
Projeto/Parte II/src/Resources/GridGraphs/8x8/: edges.txt  nodes.txt
Projeto/Parte II/src/UserInteraction/: AlgorithmAnalysis.cpp  AlgorithmAnalysis.h  ClientInfo.cpp  ClientInfo.h  InterestManager.cpp  InterestManager.h  MagicGenerator.cpp  MagicGenerator.h  Menu.cpp  Menu.h
Projeto/Parte II/src/Utils/: GraphView.cpp  GraphView.h  ReadFiles.cpp  ReadFiles.h  Util.cpp  Util.h
Projeto/Parte II/src/lib/: graphviewer.cpp
